--- a/Pr_9/node-auth-app/Dockerfile
+++ b/Pr_9/node-auth-app/Dockerfile
@@ -1,9 +1,10 @@
 # syntax=docker/dockerfile:1
 
 FROM node:12.18.1
+WORKDIR /code/app
 ENV NODE_ENV=production
-RUN git clone https://github.com/AamirNawaz/krakend_with_backend_srv.git /auth
-WORKDIR /auth/node-auth-app
+COPY ./app /code/app
+
 RUN npm install
 EXPOSE 4500
 CMD npm run dev
